修复：完善 Spring Security 认证与权限控制 测试：恢复 JWT 认证和权限测试 修复：避免操作日志影响业务结果 修复：修正设备缓存和重复查询问题 修复：增加客户端工单幂等键 重构：精简状态机和学习式注释 文档：更新项目状态和实现边界